tests/paczka1/small_fuzzy/55340293.err
Error in line 3: S847 S847 93,5
Error in line 4: S847 A584 13,8
Error in line 5: mrLf A632 33,3
